2010-11-04  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-07
	* fix to EventContent by Vasu

2010-10-23  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-06
	* fix sequence order bug (reported by Bryan), which so far only
	appeared online (which still remains a big fat mystery!!): rewrite
	of Configuration.orderedSequenceIterator(), which is in charge of
	the ordering for OnlineConverter; for OfflineConverter, the
	ordering is done in
	ConfigurationModifier.orderedSequenceIterator(), where the same 
	problem should be observed, but as long as it isn't it remains
	unchanged.
	* first prototype of SmartPrescaleEditor (Vasu)
	* fix to ReleaseMigrator (bug reported by Martin, fixed by Vasu).

2010-10-15  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-05
	* fix to PrimaryDataset class (by Vasu), regarding path removal

2010-10-02  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* taqg V01-05-04
	* ReferenceConainer::getUnresolvedTags(): skip 'source'
	* DatabaseConnectionDialog: put cursor in pwrd field

2010-09-21  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-03
	* improve dataset management under Streams node

2010-09-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-02
	* 'ChangedIcon' in Diff changed to yellow flag
	* Implement 'move path to ...' context menu command, to move paths
	from one dataset to another within a stream

	* tag V01-05-01
	* back out of jTable.setAutoCreateRowSorter, which is a JDK 6
	feature
	* fix visualization of paths under datasets under streams

2010-09-16  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V01-05-00
	* 'remove unreference sequences' fixed
	* fixed bung in Diff regarding OutputModules
	* event contents are now fully sorted after loading:
	contents, streams, datasets, paths and statements are ordered
	alphabetically